Fix shipping options panel misaligned in the Cart sidebar

--- a/assets/js/base/components/sidebar-layout/style.scss
+++ b/assets/js/base/components/sidebar-layout/style.scss
@@ -58,8 +58,7 @@
 .is-large {
 	.wc-block-sidebar {
 		.wc-block-totals-table-item,
-		.wc-blocks-components-panel__button,
-		.wc-blocks-components-panel__content {
+		.wc-blocks-components-panel {
 			padding-left: $gap;
 			padding-right: $gap;
 		}
